--- a/generators/views/templates/pages/full-search.ejs
+++ b/generators/views/templates/pages/full-search.ejs
@@ -17,7 +17,8 @@
 
   <script>
     document.addEventListener('DOMContentLoaded', function () {
-      Coveo.SearchEndpoint.configureCloudV2Endpoint('<%%- config.coveo.org_id %>', '<%%- token %>', '<%%- config.coveo.rest_uri -%>');
+      Coveo.SearchEndpoint.configureCloudV2Endpoint('<%%- config.coveo.org_id %>', '<%%- config.coveo.superUser_api_key %>', '<%%- config.coveo.rest_uri -%>');
+      Coveo.SearchEndpoint.endpoints['default'].options.queryStringArguments.viewAllContent = 'true';
       Coveo.init<%= capitalizeCustomerSafeName %>Custo(document.getElementById('search'), {});
     })
   </script>
