Updates sfdc gulp task Adds culture en.js for custom localized dictionary

--- a/generators/views/templates/pages/agent-box.ejs
+++ b/generators/views/templates/pages/agent-box.ejs
@@ -9,6 +9,7 @@
     <!--<script src="<%%=config.coveo.cdn%>/js/templates/templatesNew.js"></script>-->
 
     <script src="js/CoveoJsSearch_Box.js"></script>
+    <script src="js/cultures/en.js"></script>
     <script src="js/Coveo.<%= capitalizeCustomerSafeName %>.js"></script>
     <script src="js/box.new.templates.js"></script>
     
