--- a/generators/views/templates/pages/secured-search.ejs
+++ b/generators/views/templates/pages/secured-search.ejs
@@ -11,6 +11,7 @@
   <script src="<%%=config.coveo.cdn%>/js/CoveoJsSearch.js"></script>
   <script src="<%%=config.coveo.cdn%>/js/templates/templatesNew.js"></script>
   
+  <script src="js/cultures/en.js"></script>
   <script src="js/Coveo.<%= capitalizeCustomerSafeName %>.js"></script>
   
   <link rel="stylesheet" href="<%%=config.coveo.cdn%>/css/CoveoFullSearchNewDesign.css" />
